--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head> 
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>PostVue</title>
   </head>
   <body>
